--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <option>Cusco</option>
                         <option>Wanchaq</option>
                         <option>Santiago</option>
-                        <option>San Sebastian</option>
+                        <option>San Sebastián</option>
                         <option>San Jerónimo</option>
                       </select>
 
